test/error/PreElseElse2.ci
public static class Test
{
	public static bool Run()
	{
#if true
		return true;
#else
#else //ERROR: '#else' after '#else'
#endif
	}
}
